src/tests/errors/lexer/008.ura
// errors/lexer/008 — `link` missing opening quote
link header.h

main():
    output("hi\n")
